syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package org.proto;

enum JobLevel {
  ENTRY_LEVEL = 0;
  MID_LEVEL = 1;
  SENIOR_LEVEL = 2;
  MANAGER = 3;
  DIRECTOR = 4;
  EXECUTIVE = 5;
}

enum JobType {
  FULLTIME = 0;
  HALFTIME = 1;
}

enum Status {
  APPLICATION_REVIEW = 0;
  INTERVIEW = 1;
  SUCCESS = 2;
  FAILURE = 3;
}

message JobRequestFullInfo {
  int32 jobID = 1;
  JobType jobType = 2;
  int32 salaryLeast = 3;
  int32 salaryGreatest = 4;
  string currency = 5;
  string jobTitle = 6;
  JobLevel jobLevel = 7;
  string jobDescription = 8;
  google.protobuf.Timestamp deadlineDate = 9;
  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;
  map<int32, bool> currentCVs = 12;
}

message LocationFullInfo {
  string country = 1;
  string state = 2;
  string address = 3;
  string contactNumber = 4;
  JobRequestFullInfo currentJobRequest = 5; // Reference to the JobRequests message
}


message CompanyFullInfo{
  int32 companiesID = 1;
  string companyName = 2;
  string companyAvatarURL = 3;
  string website = 4;
  string email = 5;
  map<int32, bool> activeRecruiters = 6;
  map<int32, bool> activeLocations = 7;
}

//not use
message CompanyMetaInfo{
  int32 companyID = 1;
  string companyName = 2;
}

message CompanyFullReq{

}

//not use
message CompanyMetaReq{

}


service CompanyService {
  rpc CompanyRegister (CompanyFullInfo) returns (CompanyFullInfo);
}

service LocationService {

}